--- a/모두의-알고리즘/index.html
+++ b/모두의-알고리즘/index.html
@@ -7,16 +7,17 @@
 </head>
 <body>
     <script>
-     function solution(n) {
-        let answer;
-
-        for(let i = 0; i < n.length - 1; i++){
-            for(let j = i + 1; j < n.length; j++) {
-                console.log(`${n[i]} - ${n[j]}`);
+      function solution(a, b){
+        let i = Math.min(a, b);
+        while(true){
+            if(a % i == 0 && b % i ==0){
+                return i;
             }
+            i--;
         }
     }
-    solution(['Tom', 'Jerry', 'Mike']);
+
+        console.log(solution(1071,1029));
     </script>
 </body>
 </html>
