--- a/Algorithm/index.html
+++ b/Algorithm/index.html
@@ -9,27 +9,27 @@
     <script>
         function solution(n, a) {
             const answer = [1, 1];
-            const move = a.split('');
+            const moves = a.split('');
             const moveTypes = ['L', 'R', 'U', 'D'];
             const dx = [0, 0, -1, 1];
             const dy = [-1, 1, 0, 0];
             
-            for (let i = 0; i < move.length; i++) {
-                for (let j = 0; j < moveTypes.length; j++) { 
-                    if (move[i] == moveTypes[j]) {
-                        answer[0] = answer[0] + dx[j];
-                        answer[1] = answer[1] + dy[j];
+            for (let move of moves) {
+                for (let i = 0; i < moveTypes.length; i++) {
+                    if (move == moveTypes[i]) {
+                        answer[0] = answer[0] + dx[i];
+                        answer[1] = answer[1] + dy[i];
                     }
-                }
 
-                if (answer[0] < 1) {
-                    answer[0] = 1;
-                } else if ( answer[1] < 1) {
-                    answer[1] = 1;
-                } else if ( answer[0] > n) {
-                    answer[0] = n;
-                } else if ( answer[1] > n) {
-                    answer[1] = n;
+                    if (answer[0] < 1) {
+                        answer[0] = 1;
+                    } else if (answer[1] < 1) {
+                        answer[1] = 1;
+                    } else if (answer[0] > n) {
+                        answer[0] = n;
+                    } else if (answer[1] > n) {
+                        answer[1] = n;
+                    }
                 }
             }
             return answer;
@@ -37,7 +37,6 @@
 
         console.log(solution(5, "RRRRRDDDDDLL"));
         console.log(solution(5, "RRRUDD"));
-
     </script>
 </body>
 </html>
