--- a/Algorithm/index.html
+++ b/Algorithm/index.html
@@ -7,36 +7,25 @@
 </head>
 <body>
     <script>
-        function solution(n, a) {
-            const answer = [1, 1];
-            const moves = a.split('');
-            const moveTypes = ['L', 'R', 'U', 'D'];
-            const dx = [0, 0, -1, 1];
-            const dy = [-1, 1, 0, 0];
-            
-            for (let move of moves) {
-                for (let i = 0; i < moveTypes.length; i++) {
-                    if (move == moveTypes[i]) {
-                        answer[0] = answer[0] + dx[i];
-                        answer[1] = answer[1] + dy[i];
-                    }
+        function solution(n) {
+            let count = 0;
 
-                    if (answer[0] < 1) {
-                        answer[0] = 1;
-                    } else if (answer[1] < 1) {
-                        answer[1] = 1;
-                    } else if (answer[0] > n) {
-                        answer[0] = n;
-                    } else if (answer[1] > n) {
-                        answer[1] = n;
+            for (let i = 0; i <= n; i++) {
+                for (let j = 0; j < 60; j++) {
+                    for (let k = 0; k < 60; k++) {
+                        if ((i % 10 === 3) 
+                            || (Math.floor(j / 10) === 3) 
+                            || (j % 10 === 3) 
+                            || (Math.floor(k / 10) === 3) 
+                            || (k % 10) === 3) {
+                            count++
+                        }
                     }
                 }
             }
-            return answer;
+            return count;
         }
-
-        console.log(solution(5, "RRRRRDDDDDLL"));
-        console.log(solution(5, "RRRUDD"));
+        console.log(solution(5));
     </script>
 </body>
 </html>
