--- a/Algorithm/index.html
+++ b/Algorithm/index.html
@@ -7,25 +7,45 @@
 </head>
 <body>
     <script>
-        function solution(n) {
-            let count = 0;
+        const grid = [
+                [1, 0, 0, 0, 0, 0, 0, 1],
+                [0, 1, 1, 0, 0, 1, 0, 0],
+                [1, 1, 0, 0, 1, 0, 1, 0],
+                [0, 0, 0, 0, 0, 1, 0, 0],
+                [0, 1, 0, 1, 0, 1, 0, 0],
+                [0, 1, 0, 1, 0, 1, 0, 0],
+                [1, 0, 0, 0, 1, 0, 0, 1],
+                [0, 1, 1, 0, 0, 1, 1, 1],
+            ];
+        const N = grid.length;
+        let count = 0;
 
-            for (let i = 0; i <= n; i++) {
-                for (let j = 0; j < 60; j++) {
-                    for (let k = 0; k < 60; k++) {
-                        if ((i % 10 === 3) 
-                            || (Math.floor(j / 10) === 3) 
-                            || (j % 10 === 3) 
-                            || (Math.floor(k / 10) === 3) 
-                            || (k % 10) === 3) {
-                            count++
-                        }
-                    }
-                }
-            }
+        function solution() {
+            findBlock(7, 7);
             return count;
         }
-        console.log(solution(5));
+
+        function findBlock(x, y) {
+            if(x < 0 || y < 0 || x >= N || y >= N) {
+                return false;
+            } else if (grid[x][y] !== 1) {
+                return false;
+            } else {
+                grid[x][y] = 2;
+                count++;
+                if ((findBlock(x + 1, y) 
+                || (findBlock(x, y + 1))
+                || (findBlock(x + 1, y + 1))
+                || (findBlock(x + 1, y - 1))
+                || (findBlock(x, y - 1))
+                || (findBlock(x - 1, y - 1))
+                || (findBlock(x - 1, y))
+                || (findBlock(x - 1, y + 1)))) {
+                    return true
+                }
+            }
+        }
+        console.log(solution());
     </script>
 </body>
 </html>
