Implement(minaje/Implement): 왕실의게임

--- a/Algorithm/index.html
+++ b/Algorithm/index.html
@@ -7,45 +7,31 @@
 </head>
 <body>
     <script>
-        const grid = [
-                [1, 0, 0, 0, 0, 0, 0, 1],
-                [0, 1, 1, 0, 0, 1, 0, 0],
-                [1, 1, 0, 0, 1, 0, 1, 0],
-                [0, 0, 0, 0, 0, 1, 0, 0],
-                [0, 1, 0, 1, 0, 1, 0, 0],
-                [0, 1, 0, 1, 0, 1, 0, 0],
-                [1, 0, 0, 0, 1, 0, 0, 1],
-                [0, 1, 1, 0, 0, 1, 1, 1],
+        function solution(n, m) {
+            const CHESS_LENGTH = 8;
+            const x = n.charCodeAt(0) - 'a'.charCodeAt(0) + 1;
+            const y = m.charCodeAt(0) - '0'.charCodeAt(0);
+            const steps = [
+                [-2 , -1 ], [-1 , -2], [1, -2], [2, -1 ],
+                [2, 1 ], [1, 2], [-1, 2], [-2, 1]
             ];
-        const N = grid.length;
-        let count = 0;
 
-        function solution() {
-            findBlock(7, 7);
-            return count;
-        }
-
-        function findBlock(x, y) {
-            if(x < 0 || y < 0 || x >= N || y >= N) {
-                return false;
-            } else if (grid[x][y] !== 1) {
-                return false;
-            } else {
-                grid[x][y] = 2;
-                count++;
-                if ((findBlock(x + 1, y) 
-                || (findBlock(x, y + 1))
-                || (findBlock(x + 1, y + 1))
-                || (findBlock(x + 1, y - 1))
-                || (findBlock(x, y - 1))
-                || (findBlock(x - 1, y - 1))
-                || (findBlock(x - 1, y))
-                || (findBlock(x - 1, y + 1)))) {
-                    return true
+            let count = 0;
+            let nx, ny;
+            nx = ny = 0;
+            for (let i = 0; i < steps.length; i++) {
+                nx = x + steps[i][0];
+                ny = y + steps[i][1];
+                
+                if (nx >= 1 && ny >= 1 && nx <= CHESS_LENGTH && ny <= CHESS_LENGTH) {
+                    count++;
                 }
             }
+            return count;
         }
-        console.log(solution());
+        console.log(solution('a', '1'));
+        console.log(solution('f', '6'));
+        console.log(solution('h', '8'));
     </script>
 </body>
 </html>
