--- a/이것이 코딩테스트다/index.html
+++ b/이것이 코딩테스트다/index.html
@@ -7,24 +7,26 @@
 </head>
 <body>
     <script>
-        function solution(n) {
-            let moneys = [500, 100, 50, 10];
+        function solution(n, k) {
+            let answer = n;
             let count = 0;
 
-            for(let money of moneys) {
-                count += Math.floor(n / money);
-                n = n % money;
+            while(true) {
+                if(answer % k === 0) {
+                    answer = answer / k;
+                    count++;
+                } else if (answer % k !== 0) {
+                    answer--;
+                    count++;
+                }
+                if(answer === 1) {
+                    break;
+                }
             }
-
             return count;
-
-            // for(let i = 0; i < money.length; i++) {
-            //     count += Math.floor(n / money[i]) //2
-            //     n = n % money[i];
-            // }
         }
 
-        console.log(solution(1260));
+        console.log(solution(25, 5));
     </script>
 </body>
 </html>
