--- a/BaekJoon/index.html
+++ b/BaekJoon/index.html
@@ -9,23 +9,22 @@
     <script>
 
         function solution(n) {
-            const temp = new Set();
-            let answer = [];
-
-            // for (let i = 0; i < n.length; i++) {
-            //     remainder = n[i] % 42;
-            //     temp.add(remainder);
-            // }
-
-            n.forEach(el => temp.add(el % 42));
-
-            answer = Array.from(temp);
-            return answer.length;
+            const changePoint = [];
+            const maxNum = Math.max(...n);
+            let answer = 0;
+            
+            for (let i = 0; i < n.length; i++) {
+                changePoint.push(n[i] / maxNum * 100);
+            }
+            answer = changePoint.reduce((a, b) => a + b);
+            return answer / n.length;
         }
 
-        console.log(solution([1, 2, 3, 4, 5, 6, 7, 8, 9, 10]));
-        console.log(solution([42, 84, 252, 420, 840, 126, 42, 84, 420]));
-        console.log(solution([39, 40, 41, 42, 43, 44, 82, 83, 84, 85]));
+        console.log(solution([40, 80, 60]));
+        console.log(solution([10, 20, 30]));
+        console.log(solution([1, 100, 100, 100]));
+        console.log(solution([1, 2, 4, 8, 16]));
+        console.log(solution([3, 10]));
     </script>
 </body>
 </html>
