--- a/BaekJoon/index.html
+++ b/BaekJoon/index.html
@@ -9,22 +9,29 @@
     <script>
 
         function solution(n) {
-            const changePoint = [];
-            const maxNum = Math.max(...n);
             let answer = 0;
-            
-            for (let i = 0; i < n.length; i++) {
-                changePoint.push(n[i] / maxNum * 100);
-            }
-            answer = changePoint.reduce((a, b) => a + b);
-            return answer / n.length;
+            let point = 0;
+
+        //    for (let i = 0; i < n.length; i++) {
+        //         if(n[i] === 'O') {
+        //             point++;
+        //         } else if (n[i] === 'X') {
+        //             point = 0;
+        //         }
+        //    }
+        
+            n.forEach(el => {
+                el === 'O' ? point++ : point = 0;
+                answer += point;
+            })
+            return answer;
         }
 
-        console.log(solution([40, 80, 60]));
-        console.log(solution([10, 20, 30]));
-        console.log(solution([1, 100, 100, 100]));
-        console.log(solution([1, 2, 4, 8, 16]));
-        console.log(solution([3, 10]));
+        console.log(solution(['O', 'O', 'X', 'X', 'O', 'X', 'X', 'O', 'O', 'O']));
+        console.log(solution(['O', 'O', 'X', 'X', 'O', 'O', 'X', 'X', 'O', 'O']));
+        console.log(solution(['O', 'X', 'O', 'X', 'O', 'X', 'O', 'X', 'O', 'X', 'O', 'X', 'O', 'X']));
+        console.log(solution(['O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O']));
+        console.log(solution(['O', 'O', 'O', 'O', 'X', 'O', 'O', 'O', 'O', 'X', 'O', 'O', 'O', 'O', 'X']));
     </script>
 </body>
 </html>
